@@ -21,24 +21,24 @@
 # Free Software Foundation, Inc.,
 # 51 Franklin St, Fifth Floor, Boston, MA 02110-1301, USA.
 
-base="${BASH_SOURCE[0]%/*}"
+typeset base="${BASH_SOURCE[0]%/*}"
 if test "${base}" = "${BASH_SOURCE[0]}"; then
-	base=".";
-fi;
+	base='.'
+fi
 
-base=$(readlink -f "$base/..");
+base="$(readlink -f "${base}/..")"
 
 # The following section is subject to substitution by distro packaging tools.
-case "$1" in
-	"base") printf '%s' "$base";;
-	"lib") printf '%s' "$base/lib/x2go";;
-	"libexec") printf '%s' "$base/lib/x2go";;
-	"share") printf '%s' "$base/share/x2go";;
-	"nx-x11") printf '%s' "$base/lib/nx/X11";;
-	"xinerama") printf '%s' "$base/lib/nx/X11/Xinerama";;
-	*) exit 1;;
+case "${1}" in
+	('base') printf '%s' "${base}";;
+	('lib') printf '%s' "${base}/lib/x2go";;
+	('libexec') printf '%s' "${base}/lib/x2go";;
+	('share') printf '%s' "${base}/share/x2go";;
+	('nx-x11') printf '%s' "${base}/lib/nx/X11";;
+	('xinerama') printf '%s' "${base}/lib/nx/X11/Xinerama";;
+	(*) exit 1;;
 esac;
 
 if test -t 1; then
-	echo "";
-fi;
+	printf '\n'
+fi
